--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "server": "json-server --watch db.json --port 5000",
+    "start": "json-server -w db.json -p 5000",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
